objects/ssot__PartyBoardCertification__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__BoardName__c</fullName>
        <label>Board Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CurrentCertificationDate__c</fullName>
        <label>Current Certificate Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__EffectiveFromDate__c</fullName>
        <label>Effective From Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ssot__EffectiveToDate__c</fullName>
        <label>Effective To Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ssot__ExpirationDate__c</fullName>
        <label>Board Certification Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Party Board Certification Id</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IssuingPartyId__c</fullName>
        <label>Issuing Party</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PartyBoardCertificationStatus__c</fullName>
        <label>Party Board Certification Status</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PartyBoardCertificationType__c</fullName>
        <label>Party Board Certification Type</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ReceivingPartyId__c</fullName>
        <label>Receiving Party</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__TerminationDate__c</fullName>
        <label>Termination Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ssot__TerminationReason__c</fullName>
        <label>Termination Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1720291140451_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PartyBoardCertification_IssuingParty_rel</label>
        <referenceTo>ssot__Party__dlm</referenceTo>
        <relationshipLabel>PartyBoardCertification_IssuingParty_rel</relationshipLabel>
        <relationshipName>rel_1720291140451_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1720291148579_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PartyBoardCertification_ReceivingPar_rel</label>
        <referenceTo>ssot__Party__dlm</referenceTo>
        <relationshipLabel>PartyBoardCertification_ReceivingPar_rel</relationshipLabel>
        <relationshipName>rel_1720291148579_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>